@@ -169,6 +169,8 @@ Bug Fixes
 
 * LUCENE-10674: Ensure BitSetConjDISI returns NO_MORE_DOCS when sub-iterator exhausts. (Jack Mazanec)
 
+* GITHUB#11794: Guard FieldExistsQuery against null pointers (Luca Cavanna)
+
 Build
 ---------------------
 
